fixing collapsed button

--- a/static/style.css
+++ b/static/style.css
@@ -93,7 +93,7 @@ h5 {
     margin-left: -10%;
 }
 
-@media screen and (min-width: 480px) and (max-width: 2000px) {
+@media screen and (min-width: 481px) and (max-width: 2000px) {
     .hello {
         margin-left: -20%;
     }
@@ -121,7 +121,7 @@ h5 {
     }
     .div-nav-small{
         display: block;
-        padding-left: 22%;
         text-align: center;
+        margin-left: 20%;
     }
 }
